Cycles crash - can't use 5 Gigabyte Tile EXR texture file #49417

Closed
opened 2016-09-21 02:49:51 +02:00 by Thomas Cheng · 13 comments

System Information
Windows 10, AMD R9 390

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error
Loading a ultra high resolution map of Vietnam only a uv plane, 35k by 35k file, roughly a 5.4 gigabyte exr file. Viewport does not display texture. When I switch on cycles preview mode, it will crash/close blender, when I hit f12 to render, it will crash/close blender.

I would also like to use a 20k by 20k displacement map with the diffuse map to generate Vietnam. Thanks.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps.

  1. Create Plane geo,
  2. UV map Geo
  3. Apply Cycles Material
  4. Load large texture to diffuse
  5. Shift Z for Cycle Preview or F12 frame render. Will crash Blender. test.blend
**System Information** Windows 10, AMD R9 390 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** Loading a ultra high resolution map of Vietnam only a uv plane, 35k by 35k file, roughly a 5.4 gigabyte exr file. Viewport does not display texture. When I switch on cycles preview mode, it will crash/close blender, when I hit f12 to render, it will crash/close blender. I would also like to use a 20k by 20k displacement map with the diffuse map to generate Vietnam. Thanks. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps. 1) Create Plane geo, 2) UV map Geo 3) Apply Cycles Material 4) Load large texture to diffuse 5) Shift Z for Cycle Preview or F12 frame render. Will crash Blender. [test.blend](https://archive.blender.org/developer/F365516/test.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ThomasCheng

Added subscriber: @ThomasCheng
Member

Added subscribers: @Sergey, @Blendify

Added subscribers: @Sergey, @Blendify
Member

@Sergey I think you are the only one who might have access to hardware to test weather or not this is Blender or hardware related.

However, @ThomasCheng I can insure you that from what you have said about your hardware so far that you will never be able to render this image. As a side note, I am sure that you do not need a 35k texture, you will be fine with a much lower res image.

@Sergey I think you are the only one who might have access to hardware to test weather or not this is Blender or hardware related. However, @ThomasCheng I can insure you that from what you have said about your hardware so far that you will never be able to render this image. As a side note, I am sure that you do not need a 35k texture, you will be fine with a much lower res image.
Author

Hi Aaron

I'm currently on a project where we are doing a documentary on Vietnam in The Foundry Modo. We extracted the images from free government sites that provides them, which includes both the color map and displacement from geotiffs. We have 4 sizes of this image, 35k, 17.5k, 9k, and 4.5k maps for different animation needs. We have many shots requiring us to see large sections of Vietnam and zooming all the way down to a city. While there are ways to switch between the 4 different maps as we zoom in, due to the high number of shots needed, it would be faster and easier to use a single high resolution map to do all the work.

By comparison, we are able to load the diffuse and displacement maps into Modo on a machine with 16gigs of ram with viewport preview and rendering. It renders much faster with 32gigs of ram, due to harddrive paging? We would like to switch to Blender for the rest of the project if possible. Thanks.

Hi Aaron I'm currently on a project where we are doing a documentary on Vietnam in The Foundry Modo. We extracted the images from free government sites that provides them, which includes both the color map and displacement from geotiffs. We have 4 sizes of this image, 35k, 17.5k, 9k, and 4.5k maps for different animation needs. We have many shots requiring us to see large sections of Vietnam and zooming all the way down to a city. While there are ways to switch between the 4 different maps as we zoom in, due to the high number of shots needed, it would be faster and easier to use a single high resolution map to do all the work. By comparison, we are able to load the diffuse and displacement maps into Modo on a machine with 16gigs of ram with viewport preview and rendering. It renders much faster with 32gigs of ram, due to harddrive paging? We would like to switch to Blender for the rest of the project if possible. Thanks.
Author

BTW, we converted the 35k image into Tile EXRs, which only loaded in sections of the image needed for rendering. Perhaps, I should be requesting support for converting images to Tile EXRs and for Blender to read it properly? I can also provide the 5GB exr file by dropbox if you need it.

BTW, we converted the 35k image into Tile EXRs, which only loaded in sections of the image needed for rendering. Perhaps, I should be requesting support for converting images to Tile EXRs and for Blender to read it properly? I can also provide the 5GB exr file by dropbox if you need it.
Thomas Cheng changed title from Cycles crash - can't use 5 Gigabyte texture file to Cycles crash - can't use 5 Gigabyte Tile EXR texture file 2016-09-21 05:29:25 +02:00

We don't use tiled cache at all in neither OpenGL viewport nor in Cycles. So converting EXR would not help here. So unless you have enough memory currently you can't render such scenes.

However, i'm trying to prevent Blender from crashing and give "Out of memory" errors in such extreams. Can you by any chance upload example textures somewhere? Maybe make them black so they are really small after compression.

We don't use tiled cache at all in neither OpenGL viewport nor in Cycles. So converting EXR would not help here. So unless you have enough memory currently you can't render such scenes. However, i'm trying to prevent Blender from crashing and give "Out of memory" errors in such extreams. Can you by any chance upload example textures somewhere? Maybe make them black so they are really small after compression.
Author

Ok, sounds good. I'm giving them to you Tiled anyway, as we have a Tile EXR pipeline and Nuke use Tile EXR for more efficient compositing anyway.

Here are the Tiled EXR files.

Black - Tile EXR - 148MB
https://www.dropbox.com/s/5yfjtc9iatwo0an/Black_Tile.exr?dl=0

Vietnam - Tile EXR - 5.2GB
https://www.dropbox.com/s/9tcl33cm3wkmefa/Vietnam_Tile.exr?dl=0

Ok, sounds good. I'm giving them to you Tiled anyway, as we have a Tile EXR pipeline and Nuke use Tile EXR for more efficient compositing anyway. Here are the Tiled EXR files. Black - Tile EXR - 148MB https://www.dropbox.com/s/5yfjtc9iatwo0an/Black_Tile.exr?dl=0 Vietnam - Tile EXR - 5.2GB https://www.dropbox.com/s/9tcl33cm3wkmefa/Vietnam_Tile.exr?dl=0

Ok, on CPU this is a real bug in the code. Fix is incoming.

Ok, on CPU this is a real bug in the code. Fix is incoming.

This issue was referenced by blender/cycles@318e45c20c

This issue was referenced by blender/cycles@318e45c20c713ba58bcdd3da71bb0fb5d4602cbc

This issue was referenced by d84c55f0fa

This issue was referenced by d84c55f0fa4775f68af4ae7beba3fbeec4a98593

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Awesome :)

Awesome :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49417
No description provided.